tests/sintax-semanth/should_fail/test3Wrong.tds
//This test should fail because an integer method returns a bool
program
begin
	integer fun(integer w)
		begin
			integer ab;
			integer bc;

			ab = 5;
			bc = 10;
			return (w == ab + bc);
		end

	bool main()
		begin
			integer h;
			h = 10;
			return fun(h);
		end
end